--- a/photo-album-web/package.json
+++ b/photo-album-web/package.json
@@ -16,11 +16,13 @@
     "@angular/compiler": "~13.0.0-next.0",
     "@angular/core": "~13.0.0-next.0",
     "@angular/forms": "~13.0.0-next.0",
-    "@angular/material": "^13.0.0",
+    "@angular/material": "^13.1.1",
     "@angular/platform-browser": "~13.0.0-next.0",
     "@angular/platform-browser-dynamic": "~13.0.0-next.0",
     "@angular/router": "~13.0.0-next.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.6.0",
+    "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
